[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "chomper"
description = "A lightweight emulation framework for emulating iOS executables and libraries."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sh4w", email = "sledgeh4w@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pyelftools >= 0.29",
    "unicorn >= 2.0.0",
    "capstone >= 5.0.0.post1",
    "lief >= 0.14.0",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "chomper.__version__" }

[tool.mypy]
files = ["src/chomper"]
python_version = "3.8"
show_error_codes = true
allow_redefinition = true
no_implicit_optional = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
ignore_missing_imports = true
