[metadata]
name = chomper
version = attr: chomper.__version__
author = Sh4w
author_email = sh4w0911@gmail.com
description = A lightweight Android native library emulation framework for executing encryption functions.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    pyelftools >= 0.29
    unicorn >= 2.0.0
    capstone >= 4.0

[options.packages.find]
where = src

[flake8]
select = B, E, F, W, B9, ISC
ignore =
    E203
    W503
per-file-ignores =
    src/chomper/__init__.py: F401, F403
exclude =
    venv
max-line-length = 88

[mypy]
files = src/chomper
python_version = 3.7
show_error_codes = True
allow_redefinition = True
no_implicit_optional = True
local_partial_types = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False
ignore_missing_imports = True
